--- a/core/sh/templates/edifice/create.html
+++ b/core/sh/templates/edifice/create.html
@@ -1,7 +1,9 @@
 {% extends 'form.html' %}
-{% load static %}
+{% load widget_tweaks %}
 
+{% load static %}
 {% block extra_refs %}
+
 <!-- Select2 -->
 <link rel="stylesheet" href="{% static 'lib/select2-4.1.0-rc.0/dist/css/select2.min.css' %}">
 <link rel="stylesheet" href="{% static 'lib/select2-4.1.0-rc.0/dist/css/select2-bootstrap.min.css' %}">
@@ -36,7 +38,10 @@
 </div>
 
 <div class="form-group">
-  <label for="location_id">Localidad:</label>
+  <div class="mt-2">
+    <label for="location_id">Localidad:</label>
+    <button type="button" class="btn btn-sm btn-primary ml-2 mb-1" id="location_add"><i class="fas fa-plus"></i></button>
+  </div>
   {{ form.location }}
   {% if form.location.errors %}
   <div class="invalid-feedback d-block">
