--- a/core/sh/templates/dependency/create.html
+++ b/core/sh/templates/dependency/create.html
@@ -2,7 +2,6 @@
 {% load static %}
 
 {% block extra_refs %}
-<!-- Select2 -->
 <link rel="stylesheet" href="{% static 'lib/select2_4.1.0/dist/css/select2.min.css' %}">
 <link rel="stylesheet" href="{% static 'lib/select2_4.1.0/dist/css/select2-bootstrap.min.css' %}">
 <script src="{% static 'lib/select2_4.1.0/dist/js/select2.full.min.js' %}"></script>
@@ -11,116 +10,97 @@
 
 {% block form %}
 <div class="form-group">
-  <div class="mt-2">
-    <label for="location_id">Localidad:</label>
-    <button type="button" class="btn btn-sm btn-primary ml-2 mb-1" id="location_add"><i class="fas fa-plus"></i></button>
-  </div>
-  {{ form.location }}
-  {% if form.location.errors %}
-    <div class="invalid-feedback d-block">
-      {{ form.location.errors|join:'<br>' }}
+    <div class="mt-2">
+        <label for="location_id">Localidad:</label>
+        <button type="button" class="btn btn-sm btn-primary ml-2 mb-1" id="location_add"><i class="fas fa-plus"></i></button>
     </div>
-  {% endif %}
+    {{ form.location }}
+    {% if form.location.errors %}
+    <div class="invalid-feedback d-block">
+        {{ form.location.errors|join:'<br>' }}
+    </div>
+    {% endif %}
 </div>
 <div class="form-group">
-  <label for="dependency">Dependencia:</label>
-  {{ form.dependency }}
-  {% if form.dependency.errors %}
+    <label for="dependency">Dependencia:</label>
+    {{ form.dependency }}
+    {% if form.dependency.errors %}
     <div class="invalid-feedback d-block">
-      {{ form.dependency.errors|join:'<br>' }}
+        {{ form.dependency.errors|join:'<br>' }}
     </div>
-  {% endif %}
+    {% endif %}
 </div>
 
 {% endblock form %}
 
 {% block form_scripts %}
-  <script src="{% static 'dependency/js/form.js' %}"></script>
+<script src="{% static 'dependency/js/form.js' %}"></script>
 {% endblock form_scripts %}
 
 {% block modals %}
-
 <div class="modal fade" id="locationModal" tabindex="-1" aria-labelledby="locationModalLabel" aria-hidden="true">
-  <form method="post" action="{%url 'sh:location_add'%}" enctype="multipart/form-data">
-    {% csrf_token %}
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Agregar una Localidad</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
+    <form method="post" action="{%url 'sh:location_add'%}" id="locationForm">  {% csrf_token %}
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="locationModalLabel">Agregar una Localidad</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="province">Provincia: </label>
+                        <button type="button" class="btn btn-sm btn-primary ml-2 mb-1" id="province_add_from_location"><i class="fas fa-plus"></i></button>
+                      {{ form.province }}  </div>
+                    <div class="form-group">
+                        <label for="location">Localidad:</label>
+                        {{ form.location }}  </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fa fa-cancel"></i> Cancelar</button>
+                    <button type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Guardar</button>
+                </div>
+            </div>
         </div>
-        <div class="modal-body">
-          <div class="container-fluid">
-            <input name="action" type="hidden" value="add">
-            {% csrf_token %}
-            <div class="form-group">
-              <label for="province">Provincia: </label>
-              <button type="button" class="btn btn-sm btn-primary ml-2 mb-1" id="province_add"><i class="fas fa-plus"></i></button>
-            {{ form.province }}
-            {% if form.province.errors %}
-              <div class="invalid-feedback d-block">
-                {{ form.province.errors|join:'<br>' }}
-              </div>
-            {% endif %}
-          </div>
-          <div class="form-group">
-            <label for="location">Localidad:</label>
-            {{ form.location }}
-            {% if form.location.errors %}
-              <div class="invalid-feedback d-block">
-                {{ form.province.errors|join:'<br>' }}
-              </div>
-            {% endif %}
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fa fa-cancel"></i> Cancelar</button>
-          <button type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Guardar</button>
-        </div>
-      </div>
-    </div>
-  </form>
+    </form>
 </div>
-
 {% endblock modals %}
 
 {% block modal_in %}
-  <div class="modal fade" id="provinceModal" tabindex="-1" aria-labelledby="provinceModalLabel" aria-hidden="true">
-  <form method="post" action="{%url 'sh:province_add'%}" enctype="multipart/form-data">
-    {% csrf_token %}
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Agregar una Provincia</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <div class="container-fluid">
-            <input name="action" type="hidden" value="add">
-            {% csrf_token %}
-            {% for field  in province_add.visible_fields  %}
-            <div class="form-group">
-              <label for="{{ field.name }}">{{ field.label }}</label>
-              {{ field }}
-              {% if field.errors %}
-                <div class="invalid-feedback d-block">
-                  {{ field.errors|join:'<br>' }}
+<div class="modal fade" id="provinceModal" tabindex="-1" aria-labelledby="provinceModalLabel" aria-hidden="true">
+  <form method="post" action="{%url 'sh:province_add'%}" id="provinceForm"> {% csrf_token %}
+      <div class="modal-dialog">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title" id="provinceModalLabel">Agregar una Provincia</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                  </button>
+              </div>
+              <div class="modal-body">
+                <div class="container-fluid">
+                  <input name="action" type="hidden" value="add">
+                  {% csrf_token %}
+                  {% for field  in province_add.visible_fields  %}
+                  <div class="form-group">
+                    <label for="{{ field.name }}">{{ field.label }}</label>
+                    {{ field }}
+                    {% if field.errors %}
+                      <div class="invalid-feedback d-block">
+                        {{ field.errors|join:'<br>' }}
+                      </div>
+                    {% endif %}
+                  </div>
+                  {% endfor %}
                 </div>
-              {% endif %}
-            </div>
-            {% endfor %}
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                  <button type="submit" class="btn btn-primary">Guardar</button>
+              </div>
           </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fa fa-cancel"></i> Cancelar </button>
-          <button type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Guardar</button>
-        </div>
       </div>
-    </div>
   </form>
 </div>
 {% endblock modal_in %}
