--- a/core/sh/templates/dependency/create.html
+++ b/core/sh/templates/dependency/create.html
@@ -12,7 +12,7 @@
 <div class="form-group">
     <div class="mt-2">
         <label for="location_id">Localidad:</label>
-        <button type="button" class="btn btn-sm btn-primary ml-2 mb-1" id="location_add"><i class="fas fa-plus"></i></button>
+        <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="location_add"><i class="fas fa-plus"></i></button>
     </div>
     {{ form.location }}
     {% if form.location.errors %}
@@ -51,15 +51,17 @@
                 <div class="modal-body">
                     <div class="form-group">
                         <label for="province">Provincia: </label>
-                        <button type="button" class="btn btn-sm btn-primary ml-2 mb-1" id="province_add_from_location"><i class="fas fa-plus"></i></button>
-                      {{ form.province }}  </div>
+                        <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="province_add_from_location"><i class="fas fa-plus"></i></button>
+                        {{ location_add.province }}
+                    </div>
                     <div class="form-group">
                         <label for="location">Localidad:</label>
-                        {{ form.location }}  </div>
+                        {{ location_add.location }}
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fa fa-cancel"></i> Cancelar</button>
-                    <button type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Guardar</button>
+                    <button type="submit" class="btn {{btn_color}}"><i class="fa fa-save"></i> Guardar</button>
                 </div>
             </div>
         </div>
@@ -96,9 +98,9 @@
                 </div>
               </div>
               <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                  <button type="submit" class="btn btn-primary">Guardar</button>
-              </div>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fa fa-cancel"></i> Cancelar</button>
+                <button type="submit" class="btn {{btn_color}}"><i class="fa fa-save"></i> Guardar</button>
+            </div>
           </div>
       </div>
   </form>
