--- a/core/sh/templates/office_loc/create.html
+++ b/core/sh/templates/office_loc/create.html
@@ -46,7 +46,10 @@
   </div>
 
 <div class="form-group">
-  <label for="id_edifice">Edificio:</label>
+  <div class="mt-2">
+    <label for="location_id">Edificio: </label>
+    <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="edifice_add"><i class="fas fa-plus"></i></button>
+  </div>
   {{ form.edifice }}
   {% if form.edifice.errors %}
   <div class="invalid-feedback d-block">
@@ -87,3 +90,103 @@
   <script src="{% static 'js/filters.js' %}"></script>
   <script src="{% static 'office_loc/js/form.js' %}"></script>
 {% endblock form_scripts %}
+
+{% block modals %}
+<div class="modal fade" id="edificeModal" tabindex="-1" aria-labelledby="locationModalLabel" aria-hidden="true">
+  <form method="post" action="{%url 'sh:edifice_add'%}" id="locationForm">  {% csrf_token %}
+      <div class="modal-dialog">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title" id="edificeModalLabel">Agregar un Edificio</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                  </button>
+              </div>
+              <div class="modal-body">
+                  <div class="form-group">
+                      <label for="province">Provincia: </label>
+                      <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="province_add_from_location"><i class="fas fa-plus"></i></button>
+                      {{ location_add.province }}
+                  </div>
+                  <div class="form-group">
+                      <label for="location">Localidad:</label>
+                      {{ location_add.location }}
+                  </div>
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fa fa-cancel"></i> Cancelar</button>
+                  <button type="submit" class="btn {{btn_color}}"><i class="fa fa-save"></i> Guardar</button>
+              </div>
+          </div>
+      </div>
+  </form>
+</div>
+{% endblock modals %}
+
+{% block modal_in %}
+<div class="modal fade" id="locationModal" tabindex="-1" aria-labelledby="locationModalLabel" aria-hidden="true">
+  <form method="post" action="{%url 'sh:location_add'%}" id="locationForm">  {% csrf_token %}
+      <div class="modal-dialog">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title" id="locationModalLabel">Agregar una Localidad</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                  </button>
+              </div>
+              <div class="modal-body">
+                  <div class="form-group">
+                      <label for="province">Provincia: </label>
+                      <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="province_add_from_location"><i class="fas fa-plus"></i></button>
+                      {{ location_add.province }}
+                  </div>
+                  <div class="form-group">
+                      <label for="location">Localidad:</label>
+                      {{ location_add.location }}
+                  </div>
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fa fa-cancel"></i> Cancelar</button>
+                  <button type="submit" class="btn {{btn_color}}"><i class="fa fa-save"></i> Guardar</button>
+              </div>
+          </div>
+      </div>
+  </form>
+</div>
+
+<div class="modal fade" id="provinceModal" tabindex="-1" aria-labelledby="provinceModalLabel" aria-hidden="true">
+  <form method="post" action="{%url 'sh:province_add'%}" id="provinceForm"> {% csrf_token %}
+      <div class="modal-dialog">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title" id="provinceModalLabel">Agregar una Provincia</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                  </button>
+              </div>
+              <div class="modal-body">
+                <div class="container-fluid">
+                  <input name="action" type="hidden" value="add">
+                  {% csrf_token %}
+                  {% for field  in province_add.visible_fields  %}
+                  <div class="form-group">
+                    <label for="{{ field.name }}">{{ field.label }}</label>
+                    {{ field }}
+                    {% if field.errors %}
+                      <div class="invalid-feedback d-block">
+                        {{ field.errors|join:'<br>' }}
+                      </div>
+                    {% endif %}
+                  </div>
+                  {% endfor %}
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fa fa-cancel"></i> Cancelar</button>
+                <button type="submit" class="btn {{btn_color}}"><i class="fa fa-save"></i> Guardar</button>
+            </div>
+          </div>
+      </div>
+  </form>
+</div>
+{% endblock modal_in %}
