--- a/core/sh/templates/office_loc/create.html
+++ b/core/sh/templates/office_loc/create.html
@@ -2,7 +2,6 @@
 {% load static %}
 
 {% block extra_refs %}
-<!-- Select2 -->
 <link rel="stylesheet" href="{% static 'lib/select2_4.1.0/dist/css/select2.min.css' %}">
 <link rel="stylesheet" href="{% static 'lib/select2_4.1.0/dist/css/select2-bootstrap.min.css' %}">
 <script src="{% static 'lib/select2_4.1.0/dist/js/select2.full.min.js' %}"></script>
@@ -14,32 +13,29 @@
   <div id="filter-edifice-cards" class="d-none">
     <div class="row">
       <div class="container">
-  <!-- Tarjeta Filtros Geográficos -->
-      <div class="card mt-1">
-        <div class="card-header {{bg_color}}">
-          Filtros por Ubicacion
-        </div>
-        <div class="card-body row">
-          <div class="form-group col-12">
-            <label for="id_province">Provincia:</label>
-            {{ form.province }}
-            {% if form.province.errors %}
-            <div class="invalid-feedback d-block">
-              {{ form.province.errors|join:"<br>" }}
-            </div>
-            {% endif %}
+  <div class="card mt-1">
+          <div class="card-header {{bg_color}}">
+            Filtros por Ubicacion
           </div>
+          <div class="card-body row">
+            <div class="form-group col-12">
+              <label for="id_province_main">Provincia:</label>  {{ form.province }}
+              {% if form.province.errors %}
+              <div class="invalid-feedback d-block">
+                {{ form.province.errors|join:"<br>" }}
+              </div>
+              {% endif %}
+            </div>
 
-          <div class="form-group col-12">
-            <label for="id_location">Localidad:</label>
-            {{ form.location }}
-            {% if form.location.errors %}
-            <div class="invalid-feedback d-block">
-              {{ form.location.errors|join:"<br>" }}
+            <div class="form-group col-12">
+              <label for="id_location_main">Localidad:</label>  {{ form.location }}
+              {% if form.location.errors %}
+              <div class="invalid-feedback d-block">
+                {{ form.location.errors|join:"<br>" }}
+              </div>
+              {% endif %}
             </div>
-            {% endif %}
           </div>
-        </div>
         </div>
       </div>
     </div>
@@ -47,8 +43,7 @@
 
 <div class="form-group">
   <div class="mt-2">
-    <label for="location_id">Edificio: </label>
-    <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="edifice_add"><i class="fas fa-plus"></i></button>
+    <label for="id_edifice_main">Edificio: </label>  <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="edifice_add"><i class="fas fa-plus"></i></button>
   </div>
   {{ form.edifice }}
   {% if form.edifice.errors %}
@@ -93,104 +88,99 @@
 
 {% block modals %}
 <div class="modal fade" id="edificeModal" tabindex="-1" aria-labelledby="edificeModalLabel" aria-hidden="true">
-  <form method="post" action="{%url 'sh:edifice_add'%}" id="edificeForm">  {% csrf_token %}
-      <div class="modal-dialog">
-          <div class="modal-content">
-              <div class="modal-header">
-                  <h5 class="modal-title" id="edificeModalLabel">Agregar un Edificio</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                  </button>
-              </div>
-              <div class="modal-body">
-                  <div class="form-group">
-                      <label for="province">Localidad: </label>
-                      <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="location_add_from_edifice"><i class="fas fa-plus"></i></button>
-                      {{ edifice_add.location }}
-                  </div>
-                  <div class="form-group">
-                      <label for="location">Edifice: </label>
-                      {{ edifice_add.edifice }}
-                  </div>
-                  <div class="form-group">
-                    <label for="location">Domicilio: </label>
-                    {{ edifice_add.address }}
+  <form method="post" action="{% url 'sh:edifice_add' %}" id="edificeForm">  {% csrf_token %}
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="edificeModalLabel">Agregar un Edificio</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
-              </div>
-              <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fa fa-cancel"></i> Cancelar</button>
-                  <button type="submit" class="btn {{btn_color}}"><i class="fa fa-save"></i> Guardar</button>
-              </div>
-          </div>
-      </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="id_location_edifice_modal">Localidad: </label>  <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="location_add_from_edifice"><i class="fas fa-plus"></i></button>
+                        {{ edifice_add.location }}
+                    </div>
+                    <div class="form-group">
+                        <label for="id_edifice_edifice_modal">Edificio: </label>  {{ edifice_add.edifice }}
+                    </div>
+                    <div class="form-group">
+                        <label for="id_address_edifice_modal">Domicilio: </label>  {{ edifice_add.address }}
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fa fa-cancel"></i> Cancelar</button>
+                    <button type="submit" class="btn {{btn_color}}"><i class="fa fa-save"></i> Guardar</button>
+                </div>
+            </div>
+        </div>
   </form>
 </div>
 {% endblock modals %}
 
 {% block modal_in %}
 <div class="modal fade" id="locationModal" tabindex="-1" aria-labelledby="locationModalLabel" aria-hidden="true">
-  <form method="post" action="{%url 'sh:location_add'%}" id="locationForm">  {% csrf_token %}
-      <div class="modal-dialog">
-          <div class="modal-content">
-              <div class="modal-header">
-                  <h5 class="modal-title" id="locationModalLabel">Agregar una Localidad</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                  </button>
-              </div>
-              <div class="modal-body">
-                  <div class="form-group">
-                      <label for="province">Provincia: </label>
-                      <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="province_add_from_location"><i class="fas fa-plus"></i></button>
-                      {{ location_add.province }}
-                  </div>
-                  <div class="form-group">
-                      <label for="location">Localidad:</label>
-                      {{ location_add.location }}
-                  </div>
-              </div>
-              <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fa fa-cancel"></i> Cancelar</button>
-                  <button type="submit" class="btn {{btn_color}}"><i class="fa fa-save"></i> Guardar</button>
-              </div>
-          </div>
-      </div>
+  <form method="post" action="{% url 'sh:location_add' %}" id="locationForm">  {% csrf_token %}
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="locationModalLabel">Agregar una Localidad</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="id_province_location_modal">Provincia: </label>  <button type="button" class="btn btn-sm {{ btn_color }} ml-2 mb-1" id="province_add_from_location"><i class="fas fa-plus"></i></button>
+                        {{ location_add.province }}
+                    </div>
+                    <div class="form-group">
+                        <label for="id_location_location_modal">Localidad:</label>  {{ location_add.location }}
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fa fa-cancel"></i> Cancelar</button>
+                    <button type="submit" class="btn {{btn_color}}"><i class="fa fa-save"></i> Guardar</button>
+                </div>
+            </div>
+        </div>
   </form>
 </div>
 
 <div class="modal fade" id="provinceModal" tabindex="-1" aria-labelledby="provinceModalLabel" aria-hidden="true">
-  <form method="post" action="{%url 'sh:province_add'%}" id="provinceForm"> {% csrf_token %}
-      <div class="modal-dialog">
-          <div class="modal-content">
-              <div class="modal-header">
-                  <h5 class="modal-title" id="provinceModalLabel">Agregar una Provincia</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                  </button>
-              </div>
-              <div class="modal-body">
-                <div class="container-fluid">
-                  <input name="action" type="hidden" value="add">
-                  {% csrf_token %}
-                  {% for field  in province_add.visible_fields  %}
-                  <div class="form-group">
-                    <label for="{{ field.name }}">{{ field.label }}</label>
-                    {{ field }}
-                    {% if field.errors %}
-                      <div class="invalid-feedback d-block">
-                        {{ field.errors|join:'<br>' }}
-                      </div>
-                    {% endif %}
-                  </div>
-                  {% endfor %}
+  <form method="post" action="{% url 'sh:province_add' %}" id="provinceForm"> {% csrf_token %}
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="provinceModalLabel">Agregar una Provincia</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fa fa-cancel"></i> Cancelar</button>
-                <button type="submit" class="btn {{btn_color}}"><i class="fa fa-save"></i> Guardar</button>
+                <div class="modal-body">
+                    <div class="container-fluid">
+                        <input name="action" type="hidden" value="add">
+                        {% csrf_token %}
+                        {% for field  in province_add.visible_fields  %}
+                        <div class="form-group">
+                            <label for="{{ field.name }}">{{ field.label }}</label>
+                            {{ field }}
+                            {% if field.errors %}
+                            <div class="invalid-feedback d-block">
+                                {{ field.errors|join:'<br>' }}
+                            </div>
+                            {% endif %}
+                        </div>
+                        {% endfor %}
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fa fa-cancel"></i> Cancelar</button>
+                    <button type="submit" class="btn {{btn_color}}"><i class="fa fa-save"></i> Guardar</button>
+                </div>
             </div>
-          </div>
-      </div>
+        </div>
   </form>
 </div>
 {% endblock modal_in %}
